--- a/about.en.html
+++ b/about.en.html
@@ -8,11 +8,11 @@
   body::-webkit-scrollbar {
     display: none;
   }
- html, body {
+  html, body {
     margin:0;
     padding:0;
     height:100%;
- }
+  }
   body {
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -34,10 +34,10 @@
    font-family: Louis;
    height:165px;
    background:#a3a3a3;
- }
- footer a {
+  }
+  footer a {
    color: white;
- }
+  }
   .navi {
     position: -webkit-sticky;
     position: sticky;
@@ -178,21 +178,24 @@
 <div class="member">
 <div class="arul"><img src="arul.png">
   <br>Alzafdha Amsyarul Hakim
-  <br><b>as</b> Pembuat Laporan</div>
-  <div class="farhan"><img src="farhan.png">
+  <br><b>as</b> Writer
+  </div>
+<div class="farhan"><img src="farhan.png">
     <br>Farhan Ardia Nashwan
     <br><b>as</b> Web Developer
-    <br><b>and</b> Graphic Designer</div>
+    <br><b>and</b> Graphic Designer
+  </div>
   <div class="farah"><img src="farah.png">
     <br>Farah Aura Rosadi
-    <br><b>as</b> Web Developer</div>
+    <br><b>as</b> Web Developer
+  </div>
   <div class="golda"><img src="golda.png">
     <br>Golda Clarabella Salazar
     <br><b>as</b> Content Creator</div>
   <div class="hanif"><img src="hanif.png">
     <br>Hanif Rahman
     <br><b>as</b> Content Creator</div>
-    </div>
+</div>
 </body>
 <footer>
   <div class="left-part"><img src="https://i.imgur.com/bwfrpwi.png" width="290px">
