--- a/index.html
+++ b/index.html
@@ -1,135 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kul Kul │ Home</title>
-  <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/806432746750083072/favicon_FC7_icon.ico"/>
+  <title>EUFA Euro 2020</title>
+  <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/854465020615458856/logo_uefa_euro_2020.ico"/>
+  <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet"/>
+  <link href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css" rel="stylesheet"/>
 </head>
 <style>
- body::-webkit-scrollbar {
-   display: none;
- }
- html, body {
-    margin:0;
-    padding:0;
-    height:100%;
- }
- body {
-   -ms-overflow-style: none;
-   scrollbar-width: none;
-   background-image: url("https://i.imgur.com/2HpvGjb.png");
-   min-height:100%;
-   position:relative;
-   padding-bottom:175px;
- }
- h1 {
-   text-align: center;
-   color: white;
-   font-family: Louis;
-   vertical-align: middle;
-   position: absolute;
-   top: 50%;
-   left: 0;
-   right: 0;
-   margin-top: -100px;
- }
- footer {
-  position:absolute;
-  bottom: 0;
-  width: 100%;
-  color: white;
-  font-family: Louis;
-  height:165px;
-  background:#a3a3a3;
+body::-webkit-scrollbar {
+  display: none;
 }
-footer a {
+html, body {
+ width: 100%;
+ height: 100%;
+ margin: 0px;
+ padding: 0px;
+}
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  min-height:100%;
+  height: 55vw;
+  position:relative;
+  padding-bottom: 12vw;
+  overflow-x: hidden;
+  background-image: url("https://i.imgur.com/6IIausa.jpg");
+}
+.tagline {
+  margin-top: 3vw;
+  font-family: Euro;
+  text-align: center;
+  font-size: 8vw;
+  line-height: 13vw;
   color: white;
 }
-video {
+span {
+  color: gold;
+}
+footer {
+ position:absolute;
+ bottom: 0;
+ width: 100vw;
+ color: black;
+ font-family: Louisb;
+ height: 12vw;
+ background: white;
+ text-align: center;
+}
+.navi {
+  top: 0vh;
+  z-index: 2;
+}
+.navi img {
+  position: block;
+  width: 13%;
+  margin-left: 44%;
+  margin-top: 2vh;
+}
+.center {
   position: absolute;
-  right: 0;
-  top: 0;
-  height: 100%;
+  left: 1.5vw;
+  top: 1.5vw;
+  line-height: 2vw;
+  font-size: 1.3vw;
 }
- .navi {
-   position: -webkit-sticky;
-   position: sticky;
-   top: 0px;
-   padding: 5px;
- }
- .navi ul {
-    list-style-type: none;
-    margin-right: 20px;
-    padding: 0;
-    overflow: hidden;
- }
- .navi li {
-    float: right;
- }
- .navi li a {
-   display: block;
-   color: black;
-   text-align: center;
-   padding: 14px 16px;
-   text-decoration: none;
-   font-family: Louisb;
-   font-size:15px;
-   background-color: white;
- }
- .navi li a:hover {
-   background-color: #d4d4d4;
- }
- .navi img {
-   float: left;
- }
- .left-part {
-   position: absolute;
-   left: 1%;
-   top: 20px;
- }
- .map {
-   position: absolute;
-   left: 80%;
-   top: 20px;
- }
- .right-part {
-   position: absolute;
-   left: 75%;
-   top: 50px;
-   text-align: right;
- }
- @font-face {
-   font-family: "Louis";
-   src: url("Louis George Cafe.ttf");
- }
- @font-face {
-   font-family: "Louisb";
-   src: url("Louis George Cafe Bold.ttf");
- }
- @font-face {
-   font-family: "sugare";
-   src: url("SUGARE.ttf");
- }
+#my-video {
+  position: absolute;
+  top: 30vw;
+  left: 33vw;
+  height: 18vw;
+  width: 32vw;
+}
+@font-face {
+  font-family: "Louis";
+  src: url("Louis George Cafe.ttf");
+}
+@font-face {
+  font-family: "Louisb";
+  src: url("Louis George Cafe Bold.ttf");
+}
+@font-face {
+  font-family: "Euro";
+  src: url("Euro.ttf");
+}
 </style>
 <body>
-  <video autoplay muted loop id="myVideo">
-  <source src="https://cdn.discordapp.com/attachments/794187409352687636/807877907602473010/Untitled-1.mp4" type="video/mp4">
-</video>
   <div style="clear:both;" class="navi">
-  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:125px;"></a>
-  <ul>
-    <li><a href="location.en">Our Location</a></li>
-    <li><a href="products.en">Our Products</a></li>
-    <li><a href="about.en">About Us</a></li>
-    <li><a href="company.en">Company Profile</a></li>
-  </ul>
+  <a href="index.html"><img src="https://i.imgur.com/3Pe6vjo.png" alt="logo"></a>
   </div>
+  <div class="tagline">Watch. <span>Win</span>. Celebrate.</div>
+  <video
+    id="my-video"
+    class="video-js vjs-big-play-centered vjs-theme-forest"
+    controls
+    preload="auto"
+    poster="https://i.pinimg.com/originals/01/21/60/0121603949e5107693615943b1795ce8.jpg"
+    data-setup="{}"
+  >
+    <source src="https://gma2.blab.email/fs2.m3u8" type="application/x-mpegURL" />
+    <p class="vjs-no-js">
+      <a href="https://videojs.com/html5-video-support/" target="_blank"></a>
+    </p>
+  </video>
+  <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
   <footer>
-    <div class="left-part"><img src="https://i.imgur.com/bwfrpwi.png" width="290px">
-      <br>2021. This project is created solely for a school assignment.</div>
-      <img class="map" src="https://i.imgur.com/tXOR9Iz.png" width="250px">
-    <div class="right-part">Kul Kul is also available in these languages
-    <br><a href="index">English
-      <br><a href="index.id">Bahasa Indonesia</div>
+    <div class="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/UEFA_Euro_2020_logo.svg/2560px-UEFA_Euro_2020_logo.svg.png" width="22%">
+      <br>2021. This project is only for personal use.</div>
   </footer>
 </body>
 </html>
